--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@szhsin/react-accordion": "^1.4.0",
     "@tailwindcss/vite": "^4.0.8",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "tailwindcss": "^4.0.8"
   },
