--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@szhsin/react-accordion": "^1.4.0",
     "@reduxjs/toolkit": "^2.6.0",
-    "@tailwindcss/vite": "^4.0.8",
+    "@szhsin/react-accordion": "^1.4.0",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
     "react": "^19.0.0",
@@ -20,8 +19,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
-    "redux-thunk": "^3.1.0",
-    "tailwindcss": "^4.0.8"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
