--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@szhsin/react-accordion": "^1.4.0",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
+    "bootstrap": "^5.3.5",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
