--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "react-router": "^7.1.5",
+        "react-router-dom": "^7.5.3",
         "redux-thunk": "^3.1.0"
     },
     "devDependencies": {
@@ -32,10 +33,13 @@
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "@vitejs/plugin-react-swc": "^3.9.0",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.19.0",
         "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^5.0.0",
         "globals": "^15.14.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.5",
         "vite": "^6.1.0"
     }
 }
